:new: builder/static ctors for Problem/Failure; :new: Failure messages are now localized by the RestExceptionResolver